<resources>
    <string name="app_name">DrySisters</string>
    <string name="dry">Dry</string>
    <string name="next_one">下一个</string>
    <string name="previous_one">上一个</string>
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">抽屉关闭</string>
    <string name="tip">天天吃肉吃不胖，天天DrySister身体棒</string>

    <!-- 抽屉菜单 -->
    <string name="menu_see">看看</string>
    <string name="menu_see_little_sister">看小姐姐</string>
    <string name="menu_see_news">读书看报</string>

    <string name="menu_use">用用</string>
    <string name="menu_use_check_weather">查查天气</string>
    <string name="menu_use_check_subway">查查地铁</string>
    <string name="menu_use_tools">小工具箱</string>

    <string name="menu_else">其他</string>
    <string name="menu_else_setting">设置</string>
    <string name="menu_else_about">关于</string>
    <string name="menu_drysister_version">DrySister Version: %1$s</string>

    <!-- Working -->
    <string name="working">前方正在施工&#8230;</string>

    <!--网络状态错误-->
    <string name="network_unconnected">尚未连接网络，请打开网络重新加载！</string>
    <string name="network_connected_exception">网络连接异常，请稍后重试！</string>
    <string name="network_socket_time_out">网络请求超时，请检查网络状态！</string>
    <string name="network_json_syntax_exception">服务器数据异常，请稍候重试！</string>
    <string name="network_unknown_host">当前网络不可用，请检查网络情况！</string>

    <!--刷新提示相关-->
    <string name="refresh_success">刷新成功！</string>
    <string name="load_more_num">嘤嘤嘤，新增%1$d枚%2$s！</string>

    <!--设置相关-->
    <string name="just_load_in_wifi">仅在WIFI下加载图片</string>
    <string name="clear_cache">清空缓存</string>
    <string name="cur_cache">当前缓存 %1$f mb</string>
    <string name="check_update">检查更新</string>
    <string name="cur_version">当前版本 %1$s</string>
    <string name="give_praise">给个好评</string>
    <string name="commit_question">问题反馈</string>
    <string name="share_friends">推荐给好基友</string>
    <string name="contact_me">联系我</string>

    <!--关于相关-->
    <string name="app_version">Version %1$s</string>
    <string name="about_drysister">关于DrySister</string>
    <string name="about_drysister_detail">
        DrySister，直译干妹子，是小猪2016年写的Android基础入门教程附带的实战项目，
        项目开源，遵循GPL v3协议，
        \n\n仓库地址：https://github.com/coder-pig/DrySister
        \n\n前期代码实现有详细的实现讲解，后面可能只说下遇到的问题以及难点。妹子源会慢慢增加，
        除此之外还会添加一些新的小工具，敬请期待！项目仅用于技术交流学习，请勿用于商业用途！
        \n\n如果你在使用过程中有任何建议或者大胆的想法，
        \n欢迎加QQ群：518568422 进行反馈，
        \n或者在酷安评论区留言与小猪激烈摔♂跤；
        \n\n依次谢谢：
        \n\n 1.代码家提供的Gank.API
        \n 2.Drakeet的开源项目Meizhi
        \n 3.小荳的阿里健康品牌图标库的SVG图标，链接：
        \n http://iconfont.cn/collections/detail?cid=1312
        \n 很萌的一组图标，嘤嘤嘤！
    </string>
    <string name="about_me">关于我</string>
    <string name="about_me_detail">
        一个三流Android开发者，会点Python，
        \n喜欢写有趣的文章，写过一套Android入门教程；
        \n博客：http://blog.csdn.net/coder_pig
        \nGitHub：https://github.com/coder-pig
        \n掘金和简书：太长不贴，自己搜coder-pig
    </string>
    <string name="about_open_source">用到的开源库(闲了再补充协议)</string>
    <string name="about_open_source_detail">
         com.android.support:appcompat-v7
         \ncom.android.support:design
         \ncom.android.support:cardview-v7
         \ncom.android.support.constraint:constraint-layout
         \ncom.github.chrisbanes:PhotoView
         \ncom.r0adkll:slidableactivity
         \ncom.makeramen:roundedimageview
         \nio.reactivex.rxjava2:rxjava
         \nio.reactivex.rxjava2:rxandroid
         \ncom.squareup.okhttp3:okhttp
         \ncom.squareup.okhttp3:logging-interceptor
         \ncom.squareup.retrofit2:retrofit
         \ncom.squareup.retrofit2:converter-gson
         \ncom.squareup.retrofit2:adapter-rxjava2
         \ncom.github.bumptech.glide:glide
         \ncom.github.bumptech.glide:compiler
         \ncom.jakewharton.timber:timber
    </string>


</resources>
